--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header">
         <div class="container">
             <div class="header__item">
-                <div class="logo">HACKATON</div>
+                <div class="logo">
+                    <img src="assets/images/new_logo.png" alt="">
+                </div>
                 <div class="avatar">
                         <img class="avatar_img" src="assets/images/ava.png" alt="">
                         <img class="ava_element" src="assets/images/ava-element.png" alt="">
@@ -31,15 +33,15 @@
                         <a class="menu-items--elements active" href="" id="element1"> <img src="assets/images/Vector (1).png" alt=""> Главная</a>
                         <a class="menu-items--elements" href=""> <img src="assets/images/Vector (2).png" alt=""> Информация</a>
                         <a class="menu-items--elements" href=""><img src="assets/images/Vector (3).png" alt="">Программа</a>
-                        <a class="menu-items--elements" href=""><img src="assets/images/Vector (4).png" alt="">Конференция</a>
+                        <a class="menu-items--elements" href="zoom.html"><img src="assets/images/Vector (4).png" alt="">Конференция</a>
                         <a class="menu-items--elements" href=""><img src="assets/images/Vector (5).png" alt="">Материалы</a>
                         <a class="menu-items--elements" href=""><img src="assets/images/Vector (6).png" alt="">Чекпоинт</a>
-                        <a class="menu-items--elements" href=""><img src="assets/images/Vector (7).png" alt="">Чат Telegram</a>
+                        <a class="menu-items--elements" href="chat.html"><img src="assets/images/Vector (7).png" alt="">Чат Telegram</a>
                         <a class="menu-items--elements" href=""><img src="assets/images/Vector (8).png" alt="">Вопросы</a>
                         <a class="menu-items--elements" href=""><img src="assets/images/Vector (9).png" alt="">Контакты</a>
                     </div>
                 <div class="home">
-                    <iframe src="home.html" width="100%"  height="1600px" frameborder="0"></iframe>
+                    <iframe src="home.html" width="100%"  height="3000px" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
