--- a/home.html
+++ b/home.html
@@ -33,7 +33,21 @@
             <h1>СПОНСОРЫ</h1>
             <div class="sponsors">
             <img src="assets/images/s1.png" alt="">
-        </div>
+            <img src="assets/images/s2.png" alt="">
+            <br>
+            <img src="assets/images/s3.png" alt="">
+            <img src="assets/images/s4.png" alt="">
+            <br>
+            <img src="assets/images/s5.png" alt="">
+            </div>
+            <h1>ПАРТНЕРЫ</h1>
+            <div class="partners">
+                <img src="assets/images/p1.png" alt="">
+                <img src="assets/images/p2.png" alt="">
+                <br>
+                <img src="assets/images/p3.png" alt="">
+                <img src="assets/images/p4.png" alt="">
+            </div>
         </div>
     </div>
 </body>
